Adds gray border, background logo, fixes line spacing

--- a/html/carousel.html
+++ b/html/carousel.html
@@ -16,7 +16,7 @@
             <img src="img/Miss_BMUN.jpg">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1> Miss BMUN 62? </h1> 
+                    <h1> BMUN 62 Recap </h1> 
                     <p> Check out our recap of last year's conference! </p>
                 </div>
             </div>
