--- a/html/navbar.html
+++ b/html/navbar.html
@@ -43,6 +43,7 @@
                             <li><a href="ComingSoon.php">Conference Info</a></li>
                             <li><a href="ComingSoon.php">Alumni Scholarship</a></li>
                             <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
+                            <li><a href="ComingSoon.php">Mailings</a></li>
                         </ul>
                     </li>
 
