--- a/html/carousel.html
+++ b/html/carousel.html
@@ -4,7 +4,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="img/Campanile.jpg">
+            <img src="img/Campanile_Carousel.jpg">
             <div class="container">
                 <div class="carousel-caption">
                     <h1> BMUN LXIII </h1>
@@ -13,20 +13,29 @@
             </div>  
         </div>
         <div class="item"> 
-            <img src="img/Miss_BMUN.jpg">
+            <img src="img/BMUN_Recap_Carousel.jpg">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1> BMUN 62 Recap </h1> 
-                    <p> Check out our recap of last year's conference! </p>
+                    <h1> BMUN LXII Recap </h1> 
+                    <p> Take a look at our 2014 62nd session conference. </p>
                 </div>
             </div>
         </div>
         <div class="item"> 
-            <img src="img/Committees.jpg">
+            <img src="img/Committees_Carousel.jpg">
             <div class="container">
                 <div class="carousel-caption">
                     <h1> Committees </h1> 
-                    <p> Our full list of committees for BMUN LXIII is now up! </p>
+                    <p> The list of our 2015 63rd session committees is now available. </p>
+                </div>
+            </div>
+        </div>
+        <div class="item"> 
+            <img src="img/DW_Carousel.jpg">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1> Delegate Workshop </h1> 
+                    <p> Our annual Delegate Workshop will be held on campus this fall. </p>
                 </div>
             </div>
         </div>
