Changes top left logo

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -4,7 +4,7 @@
         <div class="container-fluid">
 
             <div class="navbar-header">                        
-                <a class="navbar-nav" href="index.php"> <img src="img/BMUN_White_50.gif" background-color:"#0F4D92"> </a>
+                <a class="navbar-nav" href="index.php"> <img src="img/White_Logo.png" background-color:"#0F4D92"> </a>
             </div>
 
             <div class="navbar-collapse collapse">
