--- a/html/header.html
+++ b/html/header.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Berkeley Model UN">
+        <meta name="description" content="Berkeley Model United Nations">
+        <meta name="keywords" content="Berkeley, BMUN, Model UN, MUN, Model United Nations, United Nations">
         <title>Berkeley Model United Nations</title>
         <link rel="shortcut icon" href="">
 
