--- a/html/navbar.html
+++ b/html/navbar.html
@@ -15,12 +15,18 @@
                             BMUN LXIII <span class="caret"></span> 
                         </a>    
                         <ul class="dropdown-menu">
+                            <li><a href="SG_Letter.php">SG Welcome</a></li>
                             <li><a href="BMUN_Recap.php">BMUN LXII Recap</a></li>
-                            <li><a href="http://www.huxley.bmun.org">Registration</a></li>
                             <li><a href="ComingSoon.php">Timeline</a></li>
                             <li><a href="ComingSoon.php">Conference Cause</a></li>
                             <li><a href="Committees.php">Committees</a></li>
                         </ul>
+                    </li>
+
+                    <li class="active">
+                        <a href="ComingSoon.php">
+                            Alumni Scholarship
+                        </a>
                     </li>
 
                     <li class="dropdown">
@@ -39,9 +45,7 @@
                             Advisors <span class="caret"></span> 
                         </a>    
                         <ul class="dropdown-menu">
-                            <li><a href="SG_Letter.php">SG Welcome</a></li>
-                            <li><a href="ComingSoon.php">Conference Info</a></li>
-                            <li><a href="ComingSoon.php">Alumni Scholarship</a></li>
+                            <li><a href="http://www.huxley.bmun.org">Registration</a></li>
                             <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
                             <li><a href="ComingSoon.php">Mailings</a></li>
                         </ul>
@@ -53,7 +57,6 @@
                         </a>    
                         <ul class="dropdown-menu">
                             <li><a href="Delegate_Welcome.php">Delegate Welcome</a></li>
-                            <li><a href="ComingSoon.php">Country Matrix</a></li>
                             <li><a href="ComingSoon.php">Delegate Guide</a></li>
                             <li><a href="ComingSoon.php">Delegate FAQs</a></li>
                         </ul>
