--- a/html/header.html
+++ b/html/header.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Berkeley Model United Nations">
         <meta name="keywords" content="Berkeley, BMUN, Model UN, MUN, Model United Nations, United Nations">
         <title>Berkeley Model United Nations</title>
-        <link rel="shortcut icon" href="">
+        <link rel="icon" type="img/png" href="img/favicon.png">
 
         <link rel="stylesheet" href="css/bootstrap.css"  type="text/css"/>
 
