--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,81 +1,84 @@
 <!-- NAVBAR-->
-<div class="navbar-wrapper" id="myNavbar">
-    <div class="navbar-default navbar-fixed-top navbar-inner">
-        <div class="container-fluid">
+<div class="navbar navbar-default navbar-fixed-top" id="myNavbar">
+    <div class="container-fluid">
 
-            <div class="navbar-header">                        
-                <a class="navbar-nav" href="index.php"> <img src="img/White_Logo.png" background-color:"#0F4D92"> </a>
-            </div>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-bmun-navbar-collapse-1">
+                <span class="icon-bar" style="background-color:white; margin-bottom:2px"></span>
+                <span class="icon-bar" style="background-color:white; margin-top:4px; margin-bottom:4px"></span>
+                <span class="icon-bar" style="background-color:white; margin-top:2px"></span>
+            </button>
+            <a class="navbar-nav" href="index.php"> <img class="navbar-img" src="img/White_Logo.png" background-color:"#0F4D92"> </a>
+        </div>
 
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
+        <div class="navbar-collapse collapse" id="bs-bmun-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            BMUN LXIII <span class="caret"></span> 
-                        </a>    
-                        <ul class="dropdown-menu">
-                            <li><a href="SG_Letter.php">SG Welcome</a></li>
-                            <li><a href="BMUN_Recap.php">BMUN LXII Recap</a></li>
-                            <li><a href="ComingSoon.php">Timeline</a></li>
-                            <li><a href="ComingSoon.php">Conference Cause</a></li>
-                            <li><a href="Committees.php">Committees</a></li>
-                        </ul>
-                    </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        BMUN LXIII <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="SG_Letter.php">SG Welcome</a></li>
+                        <li><a href="BMUN_Recap.php">BMUN LXII Recap</a></li>
+                        <li><a href="ComingSoon.php">Timeline</a></li>
+                        <li><a href="ComingSoon.php">Conference Cause</a></li>
+                        <li><a href="Committees.php">Committees</a></li>
+                    </ul>
+                </li>
 
-                    <li class="active">
-                        <a href="ComingSoon.php">
-                            Alumni Scholarship
-                        </a>
-                    </li>
+                <li class="active">
+                    <a href="ComingSoon.php">
+                        Alumni Scholarship
+                    </a>
+                </li>
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Outreach <span class="caret"></span> 
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="Outreach_Letter.php">Outreach Welcome</a></li>
-                            <li><a href="Outreach_Session.php">Outreach Sessions</a></li>
-                            <li><a href="Delegate_Workshop.php">Delegate Workshop</a></li>
-                        </ul>
-                    </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        Outreach <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="Outreach_Letter.php">Outreach Welcome</a></li>
+                        <li><a href="Outreach_Session.php">Outreach Sessions</a></li>
+                        <li><a href="Delegate_Workshop.php">Delegate Workshop</a></li>
+                    </ul>
+                </li>
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Advisors <span class="caret"></span> 
-                        </a>    
-                        <ul class="dropdown-menu">
-                            <li><a href="http://www.huxley.bmun.org">Registration</a></li>
-                            <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
-                            <li><a href="ComingSoon.php">Mailings</a></li>
-                        </ul>
-                    </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        Advisors <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="http://www.huxley.bmun.org">Registration</a></li>
+                        <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
+                        <li><a href="ComingSoon.php">Mailings</a></li>
+                    </ul>
+                </li>
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Delegates <span class="caret"></span> 
-                        </a>    
-                        <ul class="dropdown-menu">
-                            <li><a href="Delegate_Welcome.php">Delegate Welcome</a></li>
-                            <li><a href="ComingSoon.php">Delegate Guide</a></li>
-                            <li><a href="ComingSoon.php">Delegate FAQs</a></li>
-                        </ul>
-                    </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        Delegates <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="Delegate_Welcome.php">Delegate Welcome</a></li>
+                        <li><a href="ComingSoon.php">Delegate Guide</a></li>
+                        <li><a href="ComingSoon.php">Delegate FAQs</a></li>
+                    </ul>
+                </li>
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Secretariat <span class="caret"></span> 
-                        </a>    
-                        <ul class="dropdown-menu">
-                            <li><a href="Golden_Bears_Letter.php">New Bears Welcome</a></li>
-                            <li><a href="ComingSoon.php">Officers</a></li>
-                            <li><a href="ComingSoon.php">Members</a></li>
-                            <li><a href="ComingSoon.php">Application</a></li>
-                        </ul>
-                    </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        Secretariat <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="Golden_Bears_Letter.php">New Bears Welcome</a></li>
+                        <li><a href="ComingSoon.php">Officers</a></li>
+                        <li><a href="ComingSoon.php">Members</a></li>
+                        <li><a href="ComingSoon.php">Application</a></li>
+                    </ul>
+                </li>
 
-                </ul>
-            </div>
+            </ul>
         </div>
     </div>
 </div>
