--- a/html/navbar.html
+++ b/html/navbar.html
@@ -41,6 +41,7 @@
                         <li><a href="Outreach_Letter.php">Outreach Welcome</a></li>
                         <li><a href="Outreach_Session.php">Outreach Sessions</a></li>
                         <li><a href="Delegate_Workshop.php">Delegate Workshop</a></li>
+                        <li><a href="https://docs.google.com/forms/d/1JK7NnB9mLzukoNg3iss8p98EZUCfZk9s9v5KqReLgFI/viewform?edit_requested=true">DW Registration</a></li>
                     </ul>
                 </li>
 
@@ -74,6 +75,7 @@
                         <li><a href="Golden_Bears_Letter.php">New Bears Welcome</a></li>
                         <li><a href="ComingSoon.php">Officers</a></li>
                         <li><a href="ComingSoon.php">Members</a></li>
+                        <li><a href="https://docs.google.com/forms/d/1E-81wbZvpbxgGBQFi6KXllMUZFVRXWCAwntFJoJTxTE/viewform">Recruitment Mailing</a></li>
                         <li><a href="ComingSoon.php">Application</a></li>
                     </ul>
                 </li>
