Updates nav recruitment links

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -75,8 +75,8 @@
                         <li><a href="Golden_Bears_Letter.php">New Bears Welcome</a></li>
                         <li><a href="ComingSoon.php">Officers</a></li>
                         <li><a href="ComingSoon.php">Members</a></li>
-                        <li><a href="https://docs.google.com/forms/d/1E-81wbZvpbxgGBQFi6KXllMUZFVRXWCAwntFJoJTxTE/viewform">Recruitment Mailing</a></li>
-                        <li><a href="ComingSoon.php">Application</a></li>
+                        <li><a href="http://tinyurl.com/bmunmailing">Recruitment Mailing</a></li>
+                        <li><a href="http://tinyurl.com/bmunapp2014">Application</a></li>
                     </ul>
                 </li>
 
