Adds Advisor Timeline

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -21,7 +21,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="SG_Letter.php">SG Welcome</a></li>
                         <li><a href="BMUN_Recap.php">BMUN LXII Recap</a></li>
-                        <li><a href="ComingSoon.php">Timeline</a></li>
+                        <li><a href="Timeline.php">Timeline</a></li>
                         <li><a href="ComingSoon.php">Conference Cause</a></li>
                         <li><a href="Committees.php">Committees</a></li>
                     </ul>
