Adds registration back in

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -50,7 +50,7 @@
                         Advisors <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <!-- <li><a href="http://www.huxley.bmun.org">Registration</a></li> -->
+                        <li><a href="http://www.huxley.bmun.org">Registration</a></li>
                         <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
                         <li><a href="ComingSoon.php">Mailings</a></li>
                     </ul>
