Makes css and js minified

--- a/html/header.html
+++ b/html/header.html
@@ -11,7 +11,7 @@
         <title>Berkeley Model United Nations</title>
         <link rel="icon" type="img/png" href="img/favicon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.css"  type="text/css"/>
+        <link rel="stylesheet" href="css/bootstrap.min.css"  type="text/css"/>
 
         <!-- Custom Styles -->
         <link rel="stylesheet" href="css/bmun-theme.css" type="text/css"/>
@@ -19,4 +19,4 @@
 
     <body> 
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-        <script src="js/bootstrap.js"></script>
+        <script src="js/bootstrap.min.js"></script>
