--- a/html/navbar.html
+++ b/html/navbar.html
@@ -52,7 +52,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="http://www.huxley.bmun.org">Registration</a></li>
                         <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
-                        <li><a href="ComingSoon.php">Mailings</a></li>
+                        <li><a href="Mailings.php">Mailings</a></li>
                     </ul>
                 </li>
 
