Removes secretariat app

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -76,7 +76,7 @@
                         <li><a href="ComingSoon.php">Officers</a></li>
                         <li><a href="ComingSoon.php">Members</a></li>
                         <li><a href="http://tinyurl.com/bmunmailing">Recruitment Mailing</a></li>
-                        <li><a href="http://tinyurl.com/bmunapp2014">Application</a></li>
+                        <!-- <li><a href="http://tinyurl.com/bmunapp2014">Application</a></li> -->
                     </ul>
                 </li>
 
