Advisor Guide + changes

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -21,8 +21,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="SG_Letter.php">SG Welcome</a></li>
                         <li><a href="BMUN_Recap.php">BMUN LXII Recap</a></li>
-                        <li><a href="Timeline.php">Timeline</a></li>
-                        <li><a href="ComingSoon.php">Conference Cause</a></li>
+                        <li><a href="Conference_Cause.php">Conference Cause</a></li>
                         <li><a href="Committees.php">Committees</a></li>
                     </ul>
                 </li>
@@ -41,7 +40,7 @@
                         <li><a href="Outreach_Letter.php">Outreach Welcome</a></li>
                         <li><a href="Outreach_Session.php">Outreach Sessions</a></li>
                         <li><a href="Delegate_Workshop.php">Delegate Workshop</a></li>
-                        <li><a href="https://docs.google.com/forms/d/1JK7NnB9mLzukoNg3iss8p98EZUCfZk9s9v5KqReLgFI/viewform?edit_requested=true">DW Registration</a></li>
+                        <!-- <li><a href="Coming_Soon.php">DW Registration</a></li> -->
                     </ul>
                 </li>
 
@@ -52,7 +51,9 @@
                     <ul class="dropdown-menu">
                         <li><a href="http://www.huxley.bmun.org">Registration</a></li>
                         <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
+                        <li><a href="Timeline.php">Timeline</a></li>
                         <li><a href="Mailings.php">Mailings</a></li>
+                        <li><a href="img/Advisor_Guide.pdf">Advisor Guide</a></li>
                     </ul>
                 </li>
 
