--- a/html/navbar.html
+++ b/html/navbar.html
@@ -27,7 +27,7 @@
                 </li>
 
                 <li class="active">
-                    <a href="ComingSoon.php">
+                    <a href="Scholarship.php">
                         Alumni Scholarship
                     </a>
                 </li>
