Tech request updates

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -65,6 +65,8 @@
                         <li><a href="Delegate_Welcome.php">Delegate Welcome</a></li>
                         <li><a href="ComingSoon.php">Delegate Guide</a></li>
                         <li><a href="ComingSoon.php">Delegate FAQs</a></li>
+                        <li><a href="img/Position_Paper_Rubric.pdf">Position Paper Guidelines</a></li>
+                        <li><a href="https://docs.google.com/a/bmun.org/forms/d/1wV_dqEJqcJ8a1fvmXeJ1dvJEAR1VCuaQiufW6nQIaHE/viewform">Position Paper Submission</a></li>
                     </ul>
                 </li>
 
