--- a/html/carousel.html
+++ b/html/carousel.html
@@ -25,17 +25,8 @@
             <img src="img/Committees_Carousel.jpg">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1> Committees </h1> 
-                    <p> The list of our 2015 63rd session committees is now available. </p>
-                </div>
-            </div>
-        </div>
-        <div class="item"> 
-            <img src="img/DW_Carousel.jpg">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1> Delegate Workshop </h1> 
-                    <p> Our annual Delegate Workshop will be held on campus this fall. </p>
+                    <h1> Blogs </h1> 
+                    <p> You can access our blogs on the Committees Page. </p>
                 </div>
             </div>
         </div>
