Tech Request Updates

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -54,6 +54,8 @@
                         <li><a href="Timeline.php">Timeline</a></li>
                         <li><a href="Mailings.php">Mailings</a></li>
                         <li><a href="img/Advisor_Guide.pdf">Advisor Guide</a></li>
+                        <li><a href="https://docs.google.com/a/bmun.org/forms/d/1s0v4uEJC28KC7BcDz4lVkyhrk88vjD39Fxfv-9AgYSQ/viewform">Delegate Name Submission Form</a></li>
+                        <li><a href="https://docs.google.com/a/bmun.org/forms/d/1aAH_piaWV1n7tRALB-J5tFVmf-p2nDW6V96O0G9FXu0/viewform">Waitlist Delegate Assignment Finalization Form</a></li>
                     </ul>
                 </li>
 
@@ -67,6 +69,7 @@
                         <li><a href="ComingSoon.php">Delegate FAQs</a></li>
                         <li><a href="img/Position_Paper_Rubric.pdf">Position Paper Guidelines</a></li>
                         <li><a href="https://docs.google.com/a/bmun.org/forms/d/1wV_dqEJqcJ8a1fvmXeJ1dvJEAR1VCuaQiufW6nQIaHE/viewform">Position Paper Submission</a></li>
+                        <li><a href="https://app.waiverforever.com/pending/hghlr0D41V1386711489">Delegate Waiver Form</a></li>
                     </ul>
                 </li>
 
