waitlist delegate names

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -54,8 +54,7 @@
                         <li><a href="Timeline.php">Timeline</a></li>
                         <li><a href="Mailings.php">Mailings</a></li>
                         <li><a href="img/Advisor_Guide.pdf">Advisor Guide</a></li>
-                        <li><a href="https://docs.google.com/a/bmun.org/forms/d/1s0v4uEJC28KC7BcDz4lVkyhrk88vjD39Fxfv-9AgYSQ/viewform">Delegate Name Submission Form</a></li>
-                        <li><a href="https://docs.google.com/a/bmun.org/forms/d/1aAH_piaWV1n7tRALB-J5tFVmf-p2nDW6V96O0G9FXu0/viewform">Waitlist Delegate Assignment Finalization Form</a></li>
+                        <li><a href="https://docs.google.com/forms/d/1zSi7rbkClXiDFjaaVcR1HC2Eeip-bp4bS6jdMpeI--Q/viewform">Waitlist Delegate Name Submission Form</a></li>
                     </ul>
                 </li>
 
