Opening ceremony tickets

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -55,6 +55,7 @@
                         <li><a href="Mailings.php">Mailings</a></li>
                         <li><a href="img/Advisor_Guide.pdf">Advisor Guide</a></li>
                         <li><a href="https://docs.google.com/forms/d/1zSi7rbkClXiDFjaaVcR1HC2Eeip-bp4bS6jdMpeI--Q/viewform">Waitlist Delegate Name Submission Form</a></li>
+                        <li><a href="https://docs.google.com/forms/d/1B2Jb8A8q8sZsS1ANuW9V9fuBn6tNguyNL6xRsaVntjE/closedform">Opening Ceremony Ticket Reservation</a></li>
                     </ul>
                 </li>
 
