Adds Officer/Secretariat Headshots and Bios

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -79,8 +79,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="Golden_Bears_Letter.php">New Bears Welcome</a></li>
-                        <li><a href="ComingSoon.php">Officers</a></li>
-                        <li><a href="ComingSoon.php">Members</a></li>
+                        <li><a href="Officers.php">Officers</a></li>
+                        <li><a href="Secretariat.php">Members</a></li>
                         <li><a href="http://tinyurl.com/bmunmailing">Recruitment Mailing</a></li>
                         <!-- <li><a href="http://tinyurl.com/bmunapp2014">Application</a></li> -->
                     </ul>
