Adds conference guide

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -65,6 +65,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="Delegate_Welcome.php">Delegate Welcome</a></li>
+                        <li><a href="img/BMUN63_Conference_Guide.pdf">Conference Guide</a></li>
                         <li><a href="ComingSoon.php">Delegate Guide</a></li>
                         <li><a href="ComingSoon.php">Delegate FAQs</a></li>
                         <li><a href="img/Position_Paper_Rubric.pdf">Position Paper Guidelines</a></li>
