--- a/html/carousel.html
+++ b/html/carousel.html
@@ -4,6 +4,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
+            <img src="img/BMUNChina.jpg">
+            <div class="container">
+                <div class="carousel-caption">
+                </div>
+            </div>  
+        </div>
+<!--         <div class="item">
             <img src="img/Campanile_Carousel.jpg">
             <div class="container">
                 <div class="carousel-caption">
@@ -29,16 +36,15 @@
                     <p> You can access our blogs on the Committees Page. </p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
-
     <!-- Controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+<!--     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
     </a>
-</div>
+ --></div>
 
 <hr>
