--- a/html/carousel.html
+++ b/html/carousel.html
@@ -4,7 +4,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="img/BMUNChina.jpg">
+            <a href="http://www.bmunchina.org"><img src="img/BMUNChina.jpg"></a>
             <div class="container">
                 <div class="carousel-caption">
                 </div>
