Changes made to reflect 64 update

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -16,18 +16,18 @@
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        BMUN LXIII <span class="caret"></span>
+                        BMUN LXIV <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="SG_Letter.php">SG Welcome</a></li>
-                        <li><a href="BMUN_Recap.php">BMUN LXII Recap</a></li>
+                        <li><a href="ComingSoon.php">SG Welcome</a></li>
+                        <li><a href="BMUN_Recap.php">BMUN LXIII Recap</a></li>
                         <li><a href="Conference_Cause.php">Conference Cause</a></li>
                         <li><a href="Committees.php">Committees</a></li>
                     </ul>
                 </li>
 
                 <li class="active">
-                    <a href="Scholarship.php">
+                    <a href="ComingSoon.php">
                         Alumni Scholarship
                     </a>
                 </li>
@@ -39,7 +39,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="Outreach_Letter.php">Outreach Welcome</a></li>
                         <li><a href="Outreach_Session.php">Outreach Sessions</a></li>
-                        <li><a href="Delegate_Workshop.php">Delegate Workshop</a></li>
+                        <li><a href="ComingSoon.php">Delegate Workshop</a></li>
                         <!-- <li><a href="Coming_Soon.php">DW Registration</a></li> -->
                     </ul>
                 </li>
@@ -51,11 +51,9 @@
                     <ul class="dropdown-menu">
                         <li><a href="http://www.huxley.bmun.org">Registration</a></li>
                         <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
-                        <li><a href="Timeline.php">Timeline</a></li>
-                        <li><a href="Mailings.php">Mailings</a></li>
+                        <li><a href="ComingSoon.php">Timeline</a></li>
+                        <li><a href="ComingSoon.php">Mailings</a></li>
                         <li><a href="img/Advisor_Guide.pdf">Advisor Guide</a></li>
-                        <li><a href="https://docs.google.com/forms/d/1zSi7rbkClXiDFjaaVcR1HC2Eeip-bp4bS6jdMpeI--Q/viewform">Waitlist Delegate Name Submission Form</a></li>
-                        <li><a href="https://docs.google.com/forms/d/1B2Jb8A8q8sZsS1ANuW9V9fuBn6tNguyNL6xRsaVntjE/closedform">Opening Ceremony Ticket Reservation</a></li>
                     </ul>
                 </li>
 
@@ -65,12 +63,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="Delegate_Welcome.php">Delegate Welcome</a></li>
-                        <li><a href="img/BMUN63_Conference_Guide.pdf">Conference Guide</a></li>
                         <li><a href="ComingSoon.php">Delegate Guide</a></li>
                         <li><a href="ComingSoon.php">Delegate FAQs</a></li>
-                        <li><a href="img/Position_Paper_Rubric.pdf">Position Paper Guidelines</a></li>
-                        <li><a href="https://docs.google.com/a/bmun.org/forms/d/1wV_dqEJqcJ8a1fvmXeJ1dvJEAR1VCuaQiufW6nQIaHE/viewform">Position Paper Submission</a></li>
-                        <li><a href="https://app.waiverforever.com/pending/hghlr0D41V1386711489">Delegate Waiver Form</a></li>
                     </ul>
                 </li>
 
@@ -79,7 +73,7 @@
                         Secretariat <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="Golden_Bears_Letter.php">New Bears Welcome</a></li>
+                        <li><a href="ComingSoon.php">New Bears Welcome</a></li>
                         <li><a href="Officers.php">Officers</a></li>
                         <li><a href="Secretariat.php">Members</a></li>
                         <li><a href="http://tinyurl.com/bmunmailing">Recruitment Mailing</a></li>
