--- a/html/navbar.html
+++ b/html/navbar.html
@@ -19,15 +19,15 @@
                         BMUN LXIV <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="ComingSoon.php">SG Welcome</a></li>
-                        <li><a href="ComingSoon.php">BMUN LXIII Recap</a></li>
+                        <li><a href="SG_Letter.php">SG Welcome</a></li>
+                        <li><a href="BMUN_Recap.php">BMUN LXIII Recap</a></li>
                         <li><a href="ComingSoon.php">Conference Cause</a></li>
                         <li><a href="Committees.php">Committees</a></li>
                     </ul>
                 </li>
 
                 <li class="active">
-                    <a href="ComingSoon.php">
+                    <a href="Scholarship.php">
                         Alumni Scholarship
                     </a>
                 </li>
@@ -37,7 +37,7 @@
                         Outreach <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="ComingSoon.php">Outreach Welcome</a></li>
+                        <li><a href="Outreach_Letter.php">Outreach Welcome</a></li>
                         <li><a href="Outreach_Session.php">Outreach Sessions</a></li>
                         <li><a href="ComingSoon.php">Delegate Workshop</a></li>
                         <!-- <li><a href="Coming_Soon.php">DW Registration</a></li> -->
@@ -73,11 +73,11 @@
                         Secretariat <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="ComingSoon.php">New Bears Welcome</a></li>
+                        <li><a href="Golden_Bears_Letter.php">New Bears Welcome</a></li>
                         <li><a href="ComingSoon.php">Officers</a></li>
                         <li><a href="ComingSoon.php">Members</a></li>
                         <li><a href="http://tinyurl.com/bmunmailing">Recruitment Mailing</a></li>
-                        <!-- <li><a href="http://tinyurl.com/bmunapp2014">Application</a></li> -->
+                        <li><a href="http://tinyurl.com/bmunapp2015">Application</a></li>
                     </ul>
                 </li>
 
