--- a/html/navbar.html
+++ b/html/navbar.html
@@ -39,7 +39,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="Outreach_Letter.php">Outreach Welcome</a></li>
                         <li><a href="Outreach_Session.php">Outreach Sessions</a></li>
-                        <li><a href="ComingSoon.php">Delegate Workshop</a></li>
+                        <li><a href="Delegate_Workshop.php">Delegate Workshop</a></li>
                         <!-- <li><a href="Coming_Soon.php">DW Registration</a></li> -->
                     </ul>
                 </li>
