adds in fixes for index and carousel

--- a/html/carousel.html
+++ b/html/carousel.html
@@ -1,50 +1,43 @@
 <!-- CAROUSEL -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    
+
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <a href="http://www.bmunchina.org"><img src="img/BMUNChina.jpg"></a>
+            <a href="http://www.huxley.bmun.org"><img src="img/Campanile_Carousel.jpg"></a>
             <div class="container">
                 <div class="carousel-caption">
+                    <h1> BMUN LXIV </h1>
+                    <p> We invite you to join our 64th session of Berkeley Model United Nations. </p>
                 </div>
-            </div>  
+            </div>
         </div>
-<!--         <div class="item">
-            <img src="img/Campanile_Carousel.jpg">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1> BMUN LXIII </h1>
-                    <p> We invite you to join our 63rd session of Berkeley Model United Nations from Feb 27, 2015 - Mar 1, 2015. </p>
-                </div>
-            </div>  
-        </div>
-        <div class="item"> 
+        <div class="item">
             <img src="img/BMUN_Recap_Carousel.jpg">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1> BMUN LXII Recap </h1> 
-                    <p> Take a look at our 2014 62nd session conference. </p>
+                    <h1> BMUN LXIII Recap </h1>
+                    <p> Take a look at our 2015 63rd session conference. </p>
                 </div>
             </div>
         </div>
-        <div class="item"> 
+        <div class="item">
             <img src="img/Committees_Carousel.jpg">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1> Blogs </h1> 
+                    <h1> Blogs </h1>
                     <p> You can access our blogs on the Committees Page. </p>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
     <!-- Controls -->
-<!--     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
     </a>
- --></div>
+</div>
 
 <hr>
