removes carousel and adds in better styling

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -12,6 +12,7 @@
         </div>
 
         <div class="navbar-collapse collapse" id="bs-bmun-navbar-collapse-1">
+            <p class="nav navbar-nav navbar-left navbar-date"> March 4th - 6th 2016</p>
             <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown">
