--- a/html/navbar.html
+++ b/html/navbar.html
@@ -22,7 +22,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="SG_Letter.php">SG Welcome</a></li>
                         <li><a href="BMUN_Recap.php">BMUN LXIII Recap</a></li>
-                        <li><a href="ComingSoon.php">Conference Cause</a></li>
+                        <li><a href="Conference_Cause.php">Conference Cause</a></li>
                         <li><a href="Committees.php">Committees</a></li>
                     </ul>
                 </li>
