--- a/html/navbar.html
+++ b/html/navbar.html
@@ -52,9 +52,9 @@
                     <ul class="dropdown-menu">
                         <li><a href="http://www.huxley.bmun.org">Registration</a></li>
                         <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
-                        <li><a href="ComingSoon.php">Timeline</a></li>
+                        <li><a href="Timeline.php">Timeline</a></li>
                         <li><a href="ComingSoon.php">Mailings</a></li>
-                        <li><a href="img/Advisor_Guide.pdf">Advisor Guide</a></li>
+                        <li><a href="img/64AdvisorGuide.pdf">Advisor Guide</a></li>
                     </ul>
                 </li>
 
