--- a/html/navbar.html
+++ b/html/navbar.html
@@ -53,7 +53,7 @@
                         <li><a href="http://www.huxley.bmun.org">Registration</a></li>
                         <li><a href="Advisor_FAQs.php">Advisor FAQs</a></li>
                         <li><a href="Timeline.php">Timeline</a></li>
-                        <li><a href="ComingSoon.php">Mailings</a></li>
+                        <li><a href="Mailings.php">Mailings</a></li>
                         <li><a href="img/64AdvisorGuide.pdf">Advisor Guide</a></li>
                     </ul>
                 </li>
