--- a/html/header.html
+++ b/html/header.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html> 
-<html lang="en"> 
+<!DOCTYPE html>
+<html lang="en">
 
     <head>
         <meta charset="utf-8">
@@ -11,12 +11,15 @@
         <title>Berkeley Model United Nations</title>
         <link rel="icon" type="img/png" href="img/favicon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css"  type="text/css"/>
+        <link rel="stylesheet" href="static/css/bootstrap.min.css"  type="text/css"/>
 
         <!-- Custom Styles -->
-        <link rel="stylesheet" href="css/bmun-theme.css" type="text/css"/>
+        <link rel="stylesheet" href="static/css/bmun-theme.css" type="text/css"/>
+        <script type="text/javascript" src="/static/js/masonry.pkgd.min.js"></script>
+        <script src="/node_modules/waypoints/lib/jquery.waypoints.min.js"></script>
+        <script src="/node_modules/waypoints/src/shortcuts/sticky.js"></script>
     </head>
 
-    <body> 
+    <body>
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="static/js/bootstrap.min.js"></script>
