--- a/html/navbar.html
+++ b/html/navbar.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar" style="background-color:white; margin-top:4px; margin-bottom:4px"></span>
                 <span class="icon-bar" style="background-color:white; margin-top:2px"></span>
             </button>
-            <a class="navbar-nav" href="index.php"> <img class="navbar-img" src="img/White_Logo.png" background-color:"#0F4D92"> </a>
+            <a class="navbar-nav" href="php/index.php"> <img class="navbar-img" src="img/White_Logo.png" background-color:"#0F4D92"> </a>
         </div>
 
         <div class="navbar-collapse collapse" id="bs-bmun-navbar-collapse-1">
@@ -47,6 +47,16 @@
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        Partnerships <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="International_Partnerships.php">International Partnerships</a></li>
+                        <li><a href="Business_Partnerships.php">Business Partnerships</a></li>
+                    </ul>
+                </li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         Advisors <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
@@ -75,12 +85,13 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="Golden_Bears_Letter.php">New Bears Welcome</a></li>
-                        <li><a href="ComingSoon.php">Officers</a></li>
+                        <li><a href="Officers.php">Officers</a></li>
                         <li><a href="ComingSoon.php">Members</a></li>
                         <li><a href="http://tinyurl.com/bmunmailing">Recruitment Mailing</a></li>
-                        <li><a href="http://tinyurl.com/bmunapp2015">Application</a></li>
+                        <li><a href="ComingSoon.php">Application</a></li>
                     </ul>
                 </li>
+
 
             </ul>
         </div>
