--- a/html/navbar.html
+++ b/html/navbar.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar" style="background-color:white; margin-top:4px; margin-bottom:4px"></span>
                 <span class="icon-bar" style="background-color:white; margin-top:2px"></span>
             </button>
-            <a class="navbar-nav" href="php/index.php"> <img class="navbar-img" src="img/White_Logo.png" background-color:"#0F4D92"> </a>
+            <a class="navbar-nav" href="index.php"> <img class="navbar-img" src="img/White_Logo.png" background-color:"#0F4D92"> </a>
         </div>
 
         <div class="navbar-collapse collapse" id="bs-bmun-navbar-collapse-1">
