--- a/html/navbar.html
+++ b/html/navbar.html
@@ -74,7 +74,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="ComingSoon.php">Delegate Welcome</a></li>
-                        <li><a href="ComingSoon.php">Delegate Guide</a></li>
+                        <li><a href="img/DelGuide.pdf">Delegate Guide</a></li>
                         <li><a href="ComingSoon.php">Delegate FAQs</a></li>
                     </ul>
                 </li>
@@ -91,8 +91,6 @@
                         <li><a href="ComingSoon.php">Application</a></li>
                     </ul>
                 </li>
-
-
             </ul>
         </div>
     </div>
