--- a/html/navbar.html
+++ b/html/navbar.html
@@ -24,6 +24,7 @@
                         <li><a href="BMUN_Recap.php">BMUN LXIII Recap</a></li>
                         <li><a href="Conference_Cause.php">Conference Cause</a></li>
                         <li><a href="Committees.php">Committees</a></li>
+                        <li><a href="img/64ConferenceGuide.pdf">Conference Guide</a></li>
                     </ul>
                 </li>
 
